--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ find_package( dlib REQUIRED )
 
 message(STATUS "OpenCV_INCLUDE_DIRS = ${dlib_INCLUDE_DIRS}")
 
+find_package(Eigen3 REQUIRED)
+
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   tf
@@ -122,7 +124,7 @@ catkin_package(
   INCLUDE_DIRS include
   LIBRARIES face_detection
   CATKIN_DEPENDS roscpp sensor_msgs std_msgs cv_bridge image_transport tf
-#  DEPENDS system_lib
+  DEPENDS eigen
 )
 
 ###########
@@ -136,6 +138,7 @@ include_directories(include
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
   ${dlib_INCLUDE_DIRS}
+  ~/Eigen
 )
 
 
