--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>compressed_image_transport</build_depend>
   <build_depend>image_geometry</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
@@ -65,6 +66,7 @@
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
+  <build_export_depend>compressed_image_transport</build_export_depend>
   <build_export_depend>image_geometry</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
@@ -73,6 +75,7 @@
   <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>compressed_image_transport</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>image_geometry</exec_depend>
 
