--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include(../../../dlib-19.4/dlib/cmake)
+include(../../../../dlib/dlib-19.6/dlib/cmake)
 #include(/usr/lib/cmake/eigen3)
 include_directories(include
   ${catkin_INCLUDE_DIRS}
