--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include(../../../../dlib/dlib-19.4/dlib/cmake)
+#include(../../../../dlib/dlib-19.4/dlib/cmake)
 #include(/usr/lib/cmake/eigen3)
 include_directories(include
   ${catkin_INCLUDE_DIRS}
@@ -90,7 +90,7 @@ add_executable(${PROJECT_NAME} src/MouthPose.cpp)
 target_link_libraries(${PROJECT_NAME}
     ${catkin_LIBRARIES}
     ${OpenCV_LIBRARIES}
-    dlib
+    ${dlib_LIBRARIES}
 )
 
 ## Rename C++ executable without prefix
